# binance-futures-availability

./: .gitignore  .lychee-results.json  .lychee-results.txt  .mise.toml  .releaserc.yml  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  README.md  catalog-info.yaml  check_backfill_progress.sh  check_system.sh  package.json  pyproject.toml  start_overnight_backfill.sh  stop_backfill.sh
.github/: dependabot.yml
.github/scripts/: check_database_stats.py  generate_stats.py  generate_volume_rankings.py  run_daily_update.py
.github/workflows/: release.yml  test-minimal.yml  test-python-inline.yml  test-python-simple.yml  test-secrets-validation.yml  update-database-simple.yml  update-database.yml
docs/architecture/: ARCHITECTURE.md  SECRETS_ARCHITECTURE.md
docs/architecture/decisions/: 0001-schema-design-daily-table.md  0002-storage-technology-duckdb.md  0003-error-handling-strict-policy.md  0004-automation-apscheduler.md  0005-aws-cli-bulk-operations.md  0007-trading-volume-metrics.md  0008-workspace-organization.md  0009-github-actions-automation.md  0010-dynamic-symbol-discovery.md  0011-20day-lookback-reliability.md  0012-auto-backfill-new-symbols.md  0013-volume-rankings-timeseries.md  0014-easy-query-access.md  0015-skill-extraction.md  0016-playwright-e2e-testing.md  0017-documentation-structure-migration.md  0018-technology-stack-upgrade-2025.md  0019-performance-optimization-strategy.md  0020-cicd-maturity-improvements.md  0021-observability-phase0-foundation.md  0022-pushover-workflow-notifications.md  0023-doppler-secrets-consolidation.md  0024-clickhouse-cleanup.md  0025-system-architecture-documentation.md  0026-documentation-rectification.md  0027-test-suite-optimization.md
docs/archive/: IMPLEMENTATION_STATUS_v1.0.0_2025-11-14.md  IMPLEMENTATION_SUMMARY_v1.0.0.md
docs/benchmarks/: worker-count-benchmark-2025-11-15.md
docs/decisions/: 0001-schema-design-daily-table.md  0002-storage-technology-duckdb.md  0003-error-handling-strict-policy.md  0004-automation-apscheduler.md  0005-aws-cli-bulk-operations.md  0006-volume-metrics-collection.md  0007-trading-volume-metrics.md  0008-workspace-organization.md  0009-github-actions-automation.md  0010-dynamic-symbol-discovery.md  0011-20day-lookback-reliability.md  0012-auto-backfill-new-symbols.md  0013-volume-rankings-timeseries.md  0014-easy-query-access.md  0015-skill-extraction.md  README.md
docs/features/: VOLUME_METRICS.md
docs/guides/: ASCII_DIAGRAM_TOOLS_COMPARISON.md  QUERY_EXAMPLES.md  QUICKSTART.md  TROUBLESHOOTING.md  using-volume-rankings.md
docs/operations/: AUTOMATION.md  BACKUP_RESTORE.md  DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS.md  GITHUB_ACTIONS_RISKS.md  MANUAL_ACTIONS_REQUIRED.md  MONITORING.md  WORKFLOW_DEBUGGING.md  WORKFLOW_FIX_SUMMARY.md
docs/plans/: README.md  v1.0.0-implementation-plan.yaml
docs/plans/0009-github-actions-automation/: plan.yaml
docs/plans/0011-20day-lookback/: plan.yaml
docs/plans/0012-auto-backfill/: plan.yaml
docs/plans/0013-volume-rankings/: plan.yaml
docs/plans/0014-easy-query-access/: plan.yaml
docs/research/2025-week1-sprint/: CI_CD_AUDIT_REPORT.md  FEATURE_EXPANSION_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  TECHNOLOGY_STACK_ANALYSIS.md  duckdb_micro_benchmarks.py  observability-research-report.md  phase-0-implementation-checklist.md  tool-comparison-matrix.md
docs/schema/: availability-database.schema.json  query-patterns.schema.json
migrations/: run_migration.py  v1.1.0_add_volume_metrics.sql
scripts/: benchmark_workers.py  monitor-workflow-metrics.sh  run_backfill_head_legacy.py  start_scheduler.py  test-workflow-locally.sh  validate-workflow-deployment.sh  verify-database-consistency.py
scripts/legacy/: README.md
scripts/operations/: README.md  backfill.py  backfill_volume.py  detect_symbol_gaps.py  discover_symbols.py  monitor_workflow.sh  validate.py
scripts/validation/: validate_performance.py
skills/documentation-improvement-workflow/: SKILL.md
skills/documentation-improvement-workflow/references/: quality-assessment-checklist.md  transformation-patterns.md
skills/duckdb-remote-parquet-query/: SKILL.md
skills/duckdb-remote-parquet-query/references/: performance-optimization.md
skills/duckdb-remote-parquet-query/scripts/: remote_query_example.py
skills/multi-agent-parallel-investigation/: SKILL.md
skills/multi-agent-parallel-investigation/references/: agent-templates.md  synthesis-patterns.md
src/binance_futures_availability/: __init__.py  __version__.py
src/binance_futures_availability/cli/: __init__.py  main.py  query.py  update.py
src/binance_futures_availability/config/: __init__.py  symbol_loader.py
src/binance_futures_availability/data/: __init__.py  symbols.json
src/binance_futures_availability/database/: __init__.py  availability_db.py  schema.py
src/binance_futures_availability/probing/: __init__.py  aws_s3_lister.py  batch_prober.py  s3_symbol_discovery.py  s3_vision.py  symbol_discovery.py
src/binance_futures_availability/queries/: __init__.py  analytics.py  snapshots.py  timelines.py  volume.py
src/binance_futures_availability/scheduler/: __init__.py  backfill.py  daily_update.py  notifications.py
tests/: conftest.py
tests/e2e/: DIAGNOSTIC_REPORT.md  README.md  TEST_RESULTS.md  conftest.py  pytest.ini  test_clickhouse_http.py  test_clickhouse_ui.py
tests/test_auto_backfill/: __init__.py  test_gap_detection.py  test_targeted_backfill.py
tests/test_cli/: __init__.py  test_commands.py
tests/test_database/: test_availability_db.py  test_schema.py
tests/test_probing/: test_20day_lookback.py  test_s3_vision.py  test_unicode_symbols.py
tests/test_queries/: test_snapshots.py
tests/test_validation/: test_continuity.py
tests/test_volume_rankings/: __init__.py  test_rankings_generation.py
tmp/binance-futures-upgrade-exploration/: DISTRIBUTION_STRATEGY_REPORT.md  INDEX.md  README_DISTRIBUTION_RESEARCH.md  RESEARCH_SUMMARY.txt  binance-futures-packaging-research.md  container-and-api-patterns.md  cost-risk-migration-analysis.md
(+21 files in other folders)
