[project]
name = "binance-futures-availability"
version = "1.2.0"
description = "Track daily availability of Binance USDT perpetual futures from Vision repository"
authors = [
    {name = "Terry Li"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "duckdb>=1.4.0,<2.0.0",  # ADR-0018: Upgrade to 1.4 LTS with compression features
    "urllib3>=2.5.0,<3.0.0",  # ADR-0018: Latest stable with connection pooling
    "pyarrow>=22.0.0,<23.0.0",  # ADR-0018: Latest stable for Parquet (ADR-0013)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",  # ADR-0018: Constrained by pytest-playwright<9.0 compatibility
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.14.5",  # ADR-0018: Latest stable linter
]
e2e = [
    "playwright>=1.56.0",  # AI agent testing (Planner, Generator, Healer)
    "pytest-playwright>=0.7.0",  # Pytest integration for Playwright
    "httpx>=0.28.0",  # Async HTTP client for API testing
]

[project.scripts]
binance-futures-availability = "binance_futures_availability.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/binance_futures_availability",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",  # ADR-0020: Enforce 80% coverage threshold
    "--strict-markers",
]
markers = [
    "integration: marks tests that require live S3 Vision API (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "ui: marks E2E UI tests with Playwright (deselect with '-m \"not ui\"')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
